finished centralDiv of Legal...

--- a/index.html
+++ b/index.html
@@ -2142,7 +2142,127 @@
       </ul>
     </div>
     <div class="col-xs-4 centralDiv sameHeight" style="border: none">
-      <ul class="questionList"></ul>
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L17.</u> How many of these charges</p><br>
+          <p style="margin-left: 45px">resulted in convictions?</p>
+        </li>
+        <li>
+          <p><b>How many times in your life have you been charged with the following:</b></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L18.</u> Disorderly conduct, vagrancy,</p><br>
+          <p style="margin-left: 45px">public intoxication</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L19.</u> Driving while intoxicated</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L20.</u> Major driving violations</p><br>
+          <p style="margin-left: 45px">(reckless driving, speeding,</p><br>
+          <p style="margin-left: 45px">no license, etc.)</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p><u>L21.</u> How many months were you</p><br>
+          <p style="margin-left: 45px">incarcerated in your life?</p><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p>L22. How long was your last</p><br>
+          <p style="margin-left: 45px">incarceration?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>L23. What was it for? <em>(use codes</em></p><br>
+          <p style="margin-left: 45px"><em>3-16, 18-20. If multiple charges,</em></p><br>
+          <p style="margin-left: 45px"><em>code most severe)</em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L24.</u> Are you presently awaiting</p><br>
+          <p style="margin-left: 45px">charges, trial or sentence?</p><br>
+          <p style="margin-left: 45px">0 - No 1 - Yes</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L25.</u> What for? (If multiple charges,</p><br>
+          <p style="margin-left: 45px">use most severe).</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>L26. How many days in the past 30</p><br>
+          <p style="margin-left: 45px">were you detained or</p><br>
+          <p style="margin-left: 45px">incarcerated?</p>
+        </li>
+      </ul>
     </div>
     <div class="col-xs-4 rightDiv sameHeight" style="border: none">
       <ul class="questionList"></ul>
