finished Legal status

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
               <td class="formCell"></td>
             </tr>
           </table>
-          <p><u>M8.</u> How important to you now is</p><br>
+          <p><u>M11.</u> Patient's inability to understand?</p><br>
           <p style="margin-left: 100px">0 - No 1 - Yes</p><br>
         </li>
       </ul>
@@ -2151,7 +2151,7 @@
             </tr>
           </table>
           <p><u>L17.</u> How many of these charges</p><br>
-          <p style="margin-left: 45px">resulted in convictions?</p>
+          <p style="margin-left: 40px">resulted in convictions?</p>
         </li>
         <li>
           <p><b>How many times in your life have you been charged with the following:</b></p>
@@ -2164,7 +2164,7 @@
             </tr>
           </table>
           <p><u>L18.</u> Disorderly conduct, vagrancy,</p><br>
-          <p style="margin-left: 45px">public intoxication</p>
+          <p style="margin-left: 40px">public intoxication</p>
         </li>
         <li>
           <table>
@@ -2183,8 +2183,8 @@
             </tr>
           </table>
           <p><u>L20.</u> Major driving violations</p><br>
-          <p style="margin-left: 45px">(reckless driving, speeding,</p><br>
-          <p style="margin-left: 45px">no license, etc.)</p>
+          <p style="margin-left: 40px">(reckless driving, speeding,</p><br>
+          <p style="margin-left: 40px">no license, etc.)</p>
         </li>
         <li>
           <table>
@@ -2201,7 +2201,7 @@
             </tr>
           </table>
           <p><u>L21.</u> How many months were you</p><br>
-          <p style="margin-left: 45px">incarcerated in your life?</p><br>
+          <p style="margin-left: 40px">incarcerated in your life?</p><br>
         </li>
         <li>
           <table>
@@ -2218,7 +2218,7 @@
             </tr>
           </table>
           <p>L22. How long was your last</p><br>
-          <p style="margin-left: 45px">incarceration?</p>
+          <p style="margin-left: 40px">incarceration?</p>
         </li>
         <li>
           <table>
@@ -2228,8 +2228,8 @@
             </tr>
           </table>
           <p>L23. What was it for? <em>(use codes</em></p><br>
-          <p style="margin-left: 45px"><em>3-16, 18-20. If multiple charges,</em></p><br>
-          <p style="margin-left: 45px"><em>code most severe)</em></p>
+          <p style="margin-left: 40px"><em>3-16, 18-20. If multiple charges,</em></p><br>
+          <p style="margin-left: 40px"><em>code most severe)</em></p>
         </li>
         <li>
           <table>
@@ -2238,8 +2238,8 @@
             </tr>
           </table>
           <p><u>L24.</u> Are you presently awaiting</p><br>
-          <p style="margin-left: 45px">charges, trial or sentence?</p><br>
-          <p style="margin-left: 45px">0 - No 1 - Yes</p>
+          <p style="margin-left: 40px">charges, trial or sentence?</p><br>
+          <p style="margin-left: 40px">0 - No 1 - Yes</p>
         </li>
         <li>
           <table>
@@ -2249,7 +2249,7 @@
             </tr>
           </table>
           <p><u>L25.</u> What for? (If multiple charges,</p><br>
-          <p style="margin-left: 45px">use most severe).</p>
+          <p style="margin-left: 40px">use most severe).</p>
         </li>
         <li>
           <table>
@@ -2259,17 +2259,122 @@
             </tr>
           </table>
           <p>L26. How many days in the past 30</p><br>
-          <p style="margin-left: 45px">were you detained or</p><br>
-          <p style="margin-left: 45px">incarcerated?</p>
+          <p style="margin-left: 40px">were you detained or</p><br>
+          <p style="margin-left: 40px">incarcerated?</p>
         </li>
       </ul>
     </div>
     <div class="col-xs-4 rightDiv sameHeight" style="border: none">
-      <ul class="questionList"></ul>
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L27.</u> How many days in the past 30</p><br>
+          <p style="margin-left: 40px">have you engaged in illegal</p><br>
+          <p style="margin-left: 40px"><em>activities for profit?</em></p>
+        </li>
+        <li>
+          <p>
+            <em>For questions L28 &amp; L29 please ask the patient to use the <b>Patient's Rating Scale</b>.</em>
+          </p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L28.</u> How serious do you feel your</p><br>
+          <p style="margin-left: 40px">present legal problems are?</p><br>
+          <p style="margin-left: 40px">(Exclude civil problems)</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L29.</u> How important to you now is</p><br>
+          <p style="margin-left: 40px">counseling or referral for these legal</p><br>
+          <p style="margin-left: 40px">problems?</p>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Interviewer Severity Rating</b></em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p>L30. How would you rate the patient's</p><br>
+          <p style="margin-left: 35px">need for legal services or counseling?</p><br>
+        </li>
+        <li style="text-align: center">
+          <p><em><b>Confidence Rating</b></em></p>
+        </li>
+        <li style="text-align: center">
+          <p>Is the above information significantly distorted by:</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L31.</u> Patient's misrepresentation?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>L32.</u> Patient's inability to understand?</p>
+        </li>
+      </ul>
     </div>
   </div>
   <!-- end row -->
-  <div class="rowLine"></div>
+  <div class="row">
+    <div class="col-xs-2">
+      <h2 style="padding: 0px; margin: 0px">COMMENTS</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
+    </div>
+  </div>
+  <!-- end row -->
 </div>
 <!-- end container -->
     
