finished fourth page

--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                 <h5 style="text-align: left">Past 30<br> days</h5>
               </td>
               <td>
-                <h5 style="text-align: center">Lifetime<br> years</h4>
+                <h5 style="text-align: center">Lifetime<br> years</h5>
                 <table>
                   <tr>
                     <td class="formCell" style="height: 0px;border:none"></td>
@@ -1933,67 +1933,67 @@
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px;"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
   <div class="row">
     <div class="col-xs-12">
-      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px"></div>
+      <div class="formInputLine" style="margin-left: 25px;margin-right: 25px; height: 50px"></div>
     </div>
   </div>
   <!-- end row -->
@@ -2342,7 +2342,7 @@
   <!-- end row -->
   <div class="row">
     <div class="col-xs-2">
-      <h2 style="padding: 0px; margin: 0px">COMMENTS</h2>
+      <h2 style="padding: 0px; margin: 0px"><u>COMMENTS</u></h2>
     </div>
   </div>
   <div class="row">
@@ -2375,6 +2375,469 @@
     </div>
   </div>
   <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>Family History</h1>
+      <p style="text-align:center">Have any of your relatives had what you would call a significant drinking, drug use, or psych problem = one that did or should have led to treatment?</p>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <p style="margin-left: 25%"><u>Mother's Side</u></p> 
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Alc</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Drug</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Psych</h5>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table><br><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H1. Grandmother</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H2. Grandfather</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H3. Mother</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H4. Aunt</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H5. Uncle</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <p style="margin-left: 25%"><u>Father's Side</u></p> 
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Alc</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Drug</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Psych</h5>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table><br><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H6. Grandmother</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H7. Grandfather</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H8. Mother</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H9. Aunt</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H10. Uncle</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <p style="margin-left: 25%"><u>Siblings</u></p> 
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Alc</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Drug</h5>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell" style="border: none"></td>
+                    <h5>Psych</h5>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table><br><br>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H11. Brother</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table style="margin-right: 40px">
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <p>H12. Sister</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row">
+    <div class="col-xs-12">
+      <p><b><em>Direction:</em></b> Place "0" in relative category where the answer is clearly <u>no for all relatives in the category</u>; "1" where the answer is clearly yes for any <u>relative within the category</u>; "X" where the answer is <u>uncertain or "I don't know"</u> and "N" where the <u>never was a relative from that category</u>. Code most problematic relatives in cases of multiple members per category.</p>
+    </div>
+  </div>
+  <div class="rowLine"></div>
 </div>
 <!-- end container -->
     
