finished leftDiv of family/social

--- a/index.html
+++ b/index.html
@@ -2838,6 +2838,244 @@
     </div>
   </div>
   <div class="rowLine"></div>
+  <div class="row">
+    <div class="col-xs-2">
+      <table style="margin-top: 10px; margin-left: 10px">
+        <tr>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-xs-10">
+      <h1 style="margin-left: -20%">FAMILY/SOCIAL RELATIONSHIPS</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight" style="border: none">
+      <ul class="questionList">
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F1.</u> Marital Status</p>
+          <table style="float: left">
+            <tr>
+              <td>
+                <ul class="smallList">
+                  <li><p>1 - Married</p></li>
+                  <li><p>2 - Remarried</p></li>
+                  <li><p>3 - Widowed</p></li>
+                </ul>
+              </td>
+              <td>
+                <ul class="smallList">
+                  <li><p>4 - Separated</p></li>
+                  <li><p>5 - Divorced</p></li>
+                  <li><p>6 - Never Married</p></li>
+                </ul>
+              </td>
+              </tr>
+          </table>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p>F2. How long have you been</p><br>
+          <p style="margin-left: 30px">in this marital status?</p><br>
+          <p style="margin-left: 30px"><em>(If never married, since age 18).</em></p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F3.</u> Are you satisfied with this situation?</p>
+          <ul class="smallList">
+            <li><p>0 - No</p></li>
+            <li><p>1 - Indifferent</p></li>
+            <li><p>2 - Yes</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F4.</u> Usual living arrangements (past 3 yr.)</p>
+          <ul class="smallList">
+            <li><p>1 - With sexual partner and children</p></li>
+            <li><p>2 - With sexual partner alone</p></li>
+            <li><p>3 - With children alone</p></li>
+            <li><p>4 - With parents</p></li>
+            <li><p>5 - With family</p></li>
+            <li><p>6 - With friends</p></li>
+            <li><p>7 - Alone</p></li>
+            <li><p>8 - Controlled environments</p></li>
+            <li><p>9 - No stable arrangements</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Years</h4>
+              </td>
+              <td>
+                <table>
+                  <tr>
+                    <td class="formCell"></td>
+                    <td class="formCell"></td>
+                  </tr>
+                </table>
+                <h4>Months</h4>
+              </td>
+            </tr>
+          </table>
+          <p>F5. How long have you</p><br>
+          <p style="margin-left: 30px">lived in those</p><br>
+          <p style="margin-left: 30px">arrangements? (If with</p><br>
+          <p style="margin-left: 30px">parents or family, since age 18).</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F6.</u> Are you satisfied with this situation?</p>
+          <ul class="smallList">
+            <li><p>0 - No</p></li>
+            <li><p>1 - Indifferent</p></li>
+            <li><p>2 - Yes</p></li>
+          </ul>
+        </li>
+        <li>
+          <p>Do you live with anyone who:</p><br>
+          <ul class="smallList">0 - No 1 - Yes</ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F7.</u> Has a current alcohol problem?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F8.</u> Uses non-prescribed drugs?</p>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F9.</u> With whom do you spend most of</p><br>
+          <p style="margin-left: 30px">your free time:</p>
+          <ul class="smallList">
+            <li><p>1 - Family</p></li>
+            <li><p>2 - Friends</p></li>
+            <li><p>3 - Alone</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F10.</u> Are you satisfied with spending your</p><br>
+          <p style="margin-left: 40px">free time this way?</p>
+          <ul class="smallList">
+            <li><p>0 - No</p></li>
+            <li><p>1 - Indifferent</p></li>
+            <li><p>2 - Yes</p></li>
+          </ul>
+        </li>
+        <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+            </tr>
+          </table>
+          <p><u>F11.</u> How many close friends do you </p><br>
+          <p style="margin-left: 40px">have?</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-2">
+      <table style="margin-top: 10px; margin-left: 10px">
+        <tr>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+          <td class="formCell"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-xs-10">
+      <h1 style="margin-left: -20%">PSYCHIATRIC STATUS</h1>
+    </div>
+  </div>
+  <!-- end row -->
+  <div class="row rowSameHeight">
+    <div class="col-xs-4 leftDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+    <div class="col-xs-4 centralDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+    <div class="col-xs-4 rightDiv sameHeight" style="border: none">
+      <ul class="questionList"></ul>
+    </div>
+  </div>
 </div>
 <!-- end container -->
     
