--- a/index.html
+++ b/index.html
@@ -554,8 +554,17 @@
           </table>
         </li>
         <li>
+          <table>
+            <tr>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+              <td class="formCell"></td>
+            </tr>
+          </table>
           <p>G26.</p>
-          <div class='formInputLine' style="width: 70%"></div>
+          <div class='formInputLine' style="width: 65%"></div>
+        </li>
+        <li>
           <table>
             <tr>
               <td class="formCell"></td>
@@ -563,21 +572,10 @@
               <td class="formCell"></td>
             </tr>
           </table>
-        </li>
-        <li>
           <p>G27.</p>
-          <div class='formInputLine' style="width: 70%"></div>
-          <table>
-            <tr>
-              <td class="formCell"></td>
-              <td class="formCell"></td>
-              <td class="formCell"></td>
-            </tr>
-          </table>
+          <div class='formInputLine' style="width: 65%"></div>
         </li>
         <li>
-          <p>G28.</p>
-          <div class='formInputLine' style="width: 70%"></div>
           <table>
             <tr>
               <td class="formCell"></td>
@@ -585,6 +583,8 @@
               <td class="formCell"></td>
             </tr>
           </table>
+          <p>G28.</p>
+          <div class='formInputLine' style="width: 65%"></div>
         </li>
       </ul>
       <br>
@@ -1687,7 +1687,7 @@
           <p><u>Note:</u> See manuel for representative examples for each drug class</p>
         </li>
         <li>
-          <p><u>Route of Administration</u>: 1 = Oral, 2 = Nasal, 3 = Smoking, 4 = Non IV inj., 5 = IV inj.</p>
+          <p><u>Route of Administration</u>: 1 = Oral, 2 = Nasal,<br> 3 = Smoking, 4 = Non IV inj., 5 = IV inj.</p>
         </li>
         <li><h2 style="text-align: left; margin-left: 20px; padding: 0px"><u>COMMENTS</u></h2></li>
       </ul>
@@ -2884,6 +2884,7 @@
           </table>
         </li>
         <li>
+          <br><br><br><br>
           <table>
             <tr>
               <td>
